26-07-2026/kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pathnex-web-policy
spec:
  podSelector:
    matchLabels:
      app: pathnex-web-app

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: pathnex-api

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: pathnex-database
